tests/snapshots/snapshot__self_hosted-4.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"self-hosted/self-hosted-runner-group.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
note[self-hosted-runner]: runs on a self-hosted runner
 --> @@INPUT@@:6:5
  |
6 |       runs-on:
  |  _____-
7 | |       group: ubuntu-runners
  | |___________________________- note: runner group implies self-hosted runner
  |
  = note: audit confidence → Low

1 finding: 1 unknown, 0 informational, 0 low, 0 medium, 0 high
