tests/snapshots/snapshot__self_hosted-5.snap
---
source: tests/snapshot.rs
expression: "zizmor().workflow(workflow_under_test(\"self-hosted/self-hosted-matrix-dimension.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
note[self-hosted-runner]: runs on a self-hosted runner
  --> @@INPUT@@:8:5
   |
 6 |       runs-on: ${{ matrix.os }}
   |       ------------------------- note: expression may expand into a self-hosted runner
 7 |   
 8 |       strategy:
   |  _____-
 9 | |       matrix:
10 | |         os: [self-hosted, ubuntu-latest]
   | |________________________________________- note: matrix declares self-hosted runner
   |
   = note: audit confidence → High

1 finding: 1 unknown, 0 informational, 0 low, 0 medium, 0 high
